--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-tag-input": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
